--- a/css/template-style.css
+++ b/css/template-style.css
@@ -442,7 +442,6 @@ a.tab-label:hover, a.tab-label.active-btn {
 	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 	padding: 6em 2em;
 	position: relative;
-	z-index: 2;
 }
 #contact input, #contact textarea {
 	background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -495,7 +494,7 @@ footer p, footer a:visited, footer a, footer a:hover {
 	color: #6c7c84;
 	font-size: 0.8em;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1043px) {
   header {
   	position: relative;
   }
@@ -540,19 +539,18 @@ footer p, footer a:visited, footer a, footer a:hover {
 
 
 
-
-
-
-
-
-
-
-
+#map
+{
+  	width: 100%;
+  	max-width: 100%;
+  	height: 400px;
+ 	border: 3px solid #92c500;
+}
 
 
 p .logoBrand{
-	height: 55px!important;
-	width: 100px!important;
+	height: 60px!important;
+	width: 75px!important;
 	margin-top: -10px;
 }
 
@@ -573,6 +571,7 @@ p .logoBrand{
 }
 #About_Us h2.section-title:after {
 	background: #fff none repeat scroll 0 0;
+	margin-top: 50px;
 }
 #About_Us i {
 	background: none repeat scroll 0 0 #fff;
@@ -601,7 +600,12 @@ p .logoBrand{
 	margin-left: 40px;
 	text-align: justify;
 }
-
+#About_Us li {
+	color: #fff;
+	font-size: 15px;
+	margin-left: 40px;
+	text-align: justify;
+}
 #About_Us .Mission{
 	margin-top: 50px;
 }
@@ -727,7 +731,8 @@ article h1, article h2, article h3, article h4, article h5, article h6 {
 	height: 150px;
 	width: 150px;
 	float: left;
-	margin:20px 20px 20px 40px; 
+	margin:20px 20px 20px 10px; 
+
 
 }
 .card:hover {
@@ -961,6 +966,57 @@ article h1, article h2, article h3, article h4, article h5, article h6 {
 }
 
 
+#Civil{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+#Civil li{
+    color:  #fff;
+    margin-left: 50px;
+    padding: 1em 1em;
+
+}
+#Civil h2{
+	margin-top: 120px;
+    color: #92c500;
+    display: block;
+    text-align: center;
+	font-size: 2.6em;
+}
+
+#CivilName{
+    color:#92c500;
+    display: block;
+   	font-size: 1.6em;
+   	margin: 20px 0px 20px 20px;
+}
+
+#CivilSubname{
+	color:#ffffff;
+    display: block;
+   	font-size: 1.0em;
+   	margin: 20px 0px 20px 20px;
+}
+
+#Civil img{
+	margin-top: 50px;
+	height: 500px;
+
+}
+#Civil hr{
+	height: 1px;
+	color: #92c500;
+}
+
+
 
 #Clients{
 	background: #6f9600 none repeat scroll 0 0;
@@ -981,8 +1037,8 @@ article h1, article h2, article h3, article h4, article h5, article h6 {
 
 img#clients{
 	max-width: 100%;
-	height: 130px;
-	width:100%;
+	height: 100px;
+	width:80px;
 }
 
 div.polaroid {
@@ -1170,4 +1226,132 @@ footer p{
 }
 
 
+
+
+
+
+#CompanyOverview {
+	background: #fff none repeat scroll 0 0;
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+	padding: 4em 2em;
+}
+#CompanyOverview  h2 {
+	color: #000;
+	margin: 0 0 1.25em;
+}
+#CompanyOverview  h2.section-title:after {
+	background: #000 none repeat scroll 0 0;
+}
+
+
+
+#CompanyOverview i {
+	background: none repeat scroll 0 0 #6f9600;
+	border-radius: 80px;
+	color: #000;
+	display: block;
+	float: left;
+	font-size: 1.8em;
+	height: 60px;
+	line-height: 60px;
+	margin-right: 0.625em;
+	text-align: center;
+	width: 60px;
+	margin-top:-15px; 
+}
+
+#CompanyOverview h3 {
+	color: #000;
+	font-size: 1em;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+/*#CompanyOverview p {
+	color: #000;
+	font-size: 15px;
+	margin-left: 40px;
+	text-align: justify;
+	margin-bottom: 60px;
+}*/
+
+#CompanyOverview li {
+	color: #000;
+	font-size: 16px;
+	margin-left: 40px;
+	text-align: justify;
+	margin-bottom: 10px;
+}
+
+#CompanyOverview .Mission{
+	margin-top: 50px;
+}
+
+#CompanyOverview li{
+	margin-left: 60px;
+}
+
+
+#box{
+	margin-left: 40px;
+}
+
+#box div{
+	font-size: 18px;
+	border:2px solid #000000;
+	color:#000000;
+	margin: 10px 30px 10px 30px;
+	font-weight: bold;
+	/*-webkit-animation: mymove 5s;  
+    -webkit-animation-fill-mode: forwards;
+    animation: mymove 5s;
+    animation-fill-mode: forwards;*/
+}
+
+#box h6{
+	font-weight: bold;
+	font-size: 18px;
+	color: #ffffff;
+	text-align: center;
+	background-color: #6f9600;
+}
+
+#box p{
+	color: #000000;
+	font-size: 15px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
+	text-align: justify;
+}
+
+#box hr{
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+
+/*
+@-webkit-keyframes mymove {
+    from {left: -100px;}
+    to {left: 40px;}
+}
+
+@keyframes mymove {
+    from {left: -100px;}
+    to {left: 40px;}
+}*/
+
+.Users{
+	margin-left: 40px;
+	color: #000000;
+	text-align: center;
+	margin-top: 50px;
+
+}
+
+.Users p{
+	margin-top: 10px;
+	font-size: 16px;
+}
 
